deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atolye
spec:
  selector:
    matchLabels:
      app: atolye
  template:
    metadata:
      labels:
        app: atolye
    spec:
      containers:
        - name: atolye
          image: mustafasayilgan/atolye15-app:v1
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: regcred
