nestjs.yml
apiVersion: v1
kind: Service
metadata:
  name: atolye15-app
spec:
  selector:
    app: atolye15-app
  # This needs to be a NodePort so that our ingress controller in GCP can access the service
  # Not needed in ingress-controller in minikube
  type: NodePort
  ports:
    - protocol: "TCP"
      nodePort: 32111
      port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: atolye15-app
  name: atolye15-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: atolye15-app
    spec:
      containers:
        - name: atolye15-app
          image: mustafasayilgan/atolye15-app:v1
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: nest-configs
          resources:
      limits:
        memory: 512Mi
        cpu: "1"
      requests:
        memory: 256Mi
        cpu: "0.2"
        mountPath: /etc/nest/conf.d
        # A health check is need for GCP and other ingress controllers to route
        # traffic to a pod
        livenessProbe:
          httpGet:
            path: /
            port: 3000
      # Load the configuration files for nginx
      volumes:
        - name: nest-configs
          configMap:
            name: nest-config
