service.yml
apiVersion: v1
kind: Service
metadata:
  name: atolye
spec:
  selector:
    app: atolye
  ports:
    - port: 3000
      targetPort: <Target Port>
